--- a/css/style.css
+++ b/css/style.css
@@ -40,9 +40,48 @@ li {display: inline-block;}
 .nav-contents {max-width: 60%; height: 4.75rem; margin-left: auto; margin-right: auto;}
 
 #hero {
-	background-image: url('../img/first-backround.jpg');
-	background-position: center, bottom;
-	height: 100vh;
-	background-size: cover;
-	background-repeat: no-repeat;
+	background-image: url('../img/first-background.jpg');
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
 }
+
+.hero-content {
+	padding-top: 14rem;
+	color: #fff;
+	text-align: center;
+	width: 60%;
+	margin-left: auto;
+	margin-right: auto;
+	font-family: 'roboto' sans-serif;
+}
+
+.hero-content h1 {
+	font-size: 3.175rem;
+	font-weight: 300;
+	padding-bottom: 1rem;
+	margin-bottom: 0;
+}
+.hero-content h4 {
+	font-size: 1.5rem;
+	font-weight: 300;
+	padding-top: 0;
+	margin-top: 0;
+	
+}
+
+.button {
+	font-size: 1.5rem;
+	background-color: #f15a29;
+	border-radius: 4px;
+	color: #fff;
+	padding: 1rem 1.5rem;
+	width: 9.6rem;
+	cursor: pointer;
+}
+
+.button:hover {
+	background-color: orange;
+}
+
