--- a/css/style.css
+++ b/css/style.css
@@ -83,5 +83,66 @@ li {display: inline-block;}
 
 .button:hover {
 	background-color: orange;
+	color: #fff;
 }
+
+
+/*===================================About Karma==================*/
+#about {padding-bottom: 15rem;}
+
+.about-contents {
+	width: 60%;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+	margin-bottom: 5rem;
+}
+
+#about h2 {
+	color: #000;
+	font-size: 2.75rem;
+	font-weight: 300;
+	text-align: center;
+	margin: 1.6rem 0 3.125rem 0;
+}
+#about img {width: 127px;
+			height: 127px;}
+
+#about li {width: 33.33333333%;
+		float: left;}
+.caption {	font-size: 1.3rem;
+			font-weight: 300;}
+
+/*========================================FOOTER =====================*/
+footer {
+		clear: both;
+		margin-top: 10%
+		background-color: #fff;
+		overflow: auto;
+		padding-bottom: 9.4rem 0;
+		}
+.footer-content {
+	width: 60%;
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+	border-top: 1px solid #ddd;
+}
+
+.social-icons {text-align: center; margin-right: 5%;}
+
+.social-icons li {
+	border-radius: 1.25rem;
+	width: 2.5rem;
+	height: 2.5rem;
+	margin: 1.25rem 5px;
+	border: 1px solid #eaebec;
+	padding: 0.625rem 0;
+	text-align: center;
+}
+
+.twitter a {color: #55acee;}
+.facebook a {color: #4c66a4;}
+.instagram a {color: #3f729b;}
+footer p {color: #838994;}
 
